force-app/main/default/objects/ICX_CustomizableProducts__mdt/ICX_CustomizableProducts__mdt.object-meta.xml
<CustomObject>
    <label>ICX_CustomizableProducts</label>
    <pluralLabel>ICX_CustomizableProducts</pluralLabel>
</CustomObject>