force-app/main/default/objects/ICX_CustomizableProducts__mdt/fields/customProductImage__c.field-meta.xml
<CustomField>
    <fullName>customProductImage__c</fullName>
    <label>customProductImage</label>
    <type>Url</type>
</CustomField>