force-app/main/default/objects/ICX_CustomizableProducts__mdt/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <description>Title of product category for customizable products</description>
    <label>ProductCategory</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>