force-app/main/default/objects/ICX_CustomizableProducts__mdt/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>ProductName</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>