force-app/main/default/objects/ICX_CustomizableProducts__mdt/fields/ProductSKU__c.field-meta.xml
<CustomField>
    <fullName>ProductSKU__c</fullName>
    <label>ProductSKU</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>