force-app/main/default/objects/ICX_CustomizableProducts__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ProductSKU__c</columns>
    <columns>ProductName__c</columns>
    <columns>ProductCategory__c</columns>
    <columns>customProductImage__c</columns>
    <columns>IsProtected</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>